--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": ">=13.0.0"
+  },
   "author": "Damon Shen",
   "license": "ISC",
   "dependencies": {
