--- a/package.json
+++ b/package.json
@@ -5,10 +5,21 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
+    "lintfix": "prettier --write . && eslint --fix src/*.js",
+    "lint": "eslint src/*.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
     "node": ">=13.0.0"
+  },
+  "lint-staged": {
+    "*.js": "npm run lintfix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "npm test"
+    }
   },
   "author": "Damon Shen",
   "license": "ISC",
@@ -18,6 +29,11 @@
     "node-fetch": "^2.6.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "husky": "^4.2.3",
+    "lint-staged": "^10.1.2",
+    "nodemon": "^2.0.2",
+    "prettier": "^2.0.4"
   }
 }
